fixed code problems