@@ -6,9 +6,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-public class    MethodLogger {
+public class MethodLogger {
 
-    private static final String LINE = "+---------------------------------------";
     private static final Object lock = new Object();
 
     public static boolean enabled = true;
@@ -19,7 +18,7 @@ public class    MethodLogger {
                     .walk(s -> s.limit(2).collect(Collectors.toList()));
             System.out.println(" ");
             System.out.println("\u001b[36;3m/" + "-".repeat(79));
-            System.out.println("| " + getSimpleClassName(stack.get(1).getClassName()) + "." + stack.get(1).getMethodName() + "");
+            System.out.println("| " + getSimpleClassName(stack.get(1).getClassName()) + "." + stack.get(1).getMethodName());
             System.out.println("\\" + "-".repeat(79) + "\u001b[0m");
             start();
         }
@@ -39,8 +38,10 @@ public class    MethodLogger {
             return;
         synchronized (lock) {
             printIndent();
-            String s = String.join(", ", Arrays.stream(params).map(p -> p == null ? "null" : p.toString()).collect(Collectors.toList()));
-            System.out.printf("[%2d] >> %s(%s)\n", Thread.currentThread().getId(), methodName(), s);
+            String s = Arrays.stream(params)
+                    .map(p -> p == null ? "null" : p.toString())
+                    .collect(Collectors.joining(", "));
+            System.out.printf("[%2d] >> %s(%s)\n", Thread.currentThread().threadId(), methodName(), s);
         }
     }
 
@@ -49,7 +50,7 @@ public class    MethodLogger {
             return;
         synchronized (lock) {
             printIndent();
-            System.out.printf("[%2d] << %s()\n", Thread.currentThread().getId(), methodName());
+            System.out.printf("[%2d] << %s()\n", Thread.currentThread().threadId(), methodName());
         }
     }
 
@@ -58,14 +59,14 @@ public class    MethodLogger {
             return;
         synchronized (lock) {
             printIndent();
-            System.out.printf("[%2d] -- %s\n", Thread.currentThread().getId(), msg);
+            System.out.printf("[%2d] -- %s\n", Thread.currentThread().threadId(), msg);
         }
     }
 
     private static final StackWalker walker = StackWalker.getInstance();
 
     private static void printIndent() {
-        int i = indents.computeIfAbsent(Thread.currentThread().getId(), k -> indent++);
+        int i = indents.computeIfAbsent(Thread.currentThread().threadId(), k -> indent++);
         while (i-- > 0)
             System.out.print("    ");
     }
